# NetworkShader

./: CMakeLists.txt  README.md
include/: glad.c
include/glad/: glad.h
src/: CMakeLists.txt  main.cpp  main.hpp
src/File/: File.hpp
src/Graphics/: Graphics.hpp
src/Network/: Network.hpp
src/Shaders/: Shader.hpp
